# ripperx3

./: .gitignore  .indent.pro  AUTHORS  ChangeLog  Makefile.am  README  TODO  acconfig.h  aclocal.m4  configure.in  ripperX.glade  strings.tbl
doc/: doxygen.conf
pixmaps/: Makefile.am  submit.xpm
src/: Makefile.am  cddb.c  cddb.h  cddb_select_cd.c  cddb_select_cd.h  config_defines.h  config_handler.c  config_handler.h  debug.h  id3_genre.c  id3_genre.h  job.c  job.h  main.c  main.h  misc_util.c  misc_util.h  plugin_handling.c  plugin_handling.h  progress_gui.c  progress_gui.h  ripper_plugin.h  ripperx.h  rx_main.c  rx_main.h  rx_progress.c  rx_progress.h  rx_track_view.c  rx_track_view.h  track_view.c  track_view.h
src/lib/: Makefile.am  id3.c  id3.h  rx_cfg.c  rx_cfg.h  rx_pixmap.c  rx_pixmap.h  rx_util.c  rx_util.h
src/plugins/: Makefile.am  cdparanoia.c  gogo.c  lame.c  oggenc.c
