dnl Boilerplate
AC_INIT
AC_CONFIG_SRCDIR([configure.in])
AM_INIT_AUTOMAKE(ripperX, 3.0)
AM_CONFIG_HEADER(config.h)


dnl Process custom command-line options
AC_ARG_ENABLE(debug,
[  --enable-debug          enable debug mode [default=no]],
              , enable_debug=no)
if test x$enable_debug = xyes; then
  AC_DEFINE(DEBUG)
fi

AC_ARG_WITH(libcddb,
            [  --with-libcddb=DIR      prefix for installed libcddb], 
            libcddb="$withval", libcddb="no")

dnl Checks for programs.
AC_PROG_CC
AC_SEARCH_LIBS([strerror],[cposix])
AM_PROG_CC_STDC
m4_warn([obsolete],
[The preprocessor macro `STDC_HEADERS' is obsolete.
  Except in unusual embedded environments, you can safely include all
  ISO C90 headers unconditionally.])dnl
# Autoupdate added the next two lines to ensure that your configure
# script's behavior did not change.  They are probably safe to remove.
AC_CHECK_INCLUDES_DEFAULT
AC_PROG_EGREP

AC_DISABLE_STATIC
AM_PROG_LIBTOOL


dnl Checks for libraries.
AC_CHECK_LIB(pthread, pthread_create)
PKG_CHECK_MODULES(RIPPERX,[
    glib-2.0 >= 1.3.14
    libxml-2.0 >= 2.4.12
    gtk+-2.0 >= 1.3.14
    gobject-2.0 >= 1.3.14
    gthread-2.0 >= 1.3.14
    cairo >= 1.0
])
AC_SUBST(RIPPERX_LIBS)
AC_SUBST(RIPPERX_CFLAGS)


dnl Checks for header files.


dnl Checks for typedefs, structures, and compiler characteristics.


dnl Checks for library functions.


dnl Checks for Additional stuffs.

dnl Check for libcddb
if test "$libcddb" != "no" ; then
    CPPFLAGS="$CPPFLAGS -I${libcddb}/include"
    LDFLAGS="$LDFLAGS -L${libcddb}/lib"
fi
AC_CHECK_HEADER(cddb/cddb.h, [], [AC_MSG_ERROR(libcddb header files not found)])
AC_CHECK_LIB(cddb, cddb_new, [], [AC_MSG_ERROR(libcddb libraries not found)])

dnl Set PACKAGE SOURCE DIR in config.h.
packagesrcdir=`cd $srcdir && pwd`

dnl Set PACKAGE PREFIX
if test "x${prefix}" = "xNONE"; then
  packageprefix=${ac_default_prefix}
else
  packageprefix=${prefix}
fi

dnl Set PACKAGE DATA & DOC DIR
packagedatadir=share/${PACKAGE}
packagedocdir=doc/${PACKAGE}

dnl Set PACKAGE DIRS in config.h.
packagepixmapsdir=${packagedatadir}/pixmaps
packagehelpdir=${packagedatadir}/help
packagemenudir=${packagedatadir}
pluginsdir=${packageprefix}/${packagedatadir}/plugins

AC_SUBST(pluginsdir)

dnl Subst PACKAGE_DATA_DIR.
NO_PREFIX_PACKAGE_DATA_DIR="${packagedatadir}"
AC_SUBST(NO_PREFIX_PACKAGE_DATA_DIR)
PACKAGE_DATA_DIR="${packageprefix}/${packagedatadir}"
AC_SUBST(PACKAGE_DATA_DIR)

dnl Subst PACKAGE_DOC_DIR.
NO_PREFIX_PACKAGE_DOC_DIR="${packagedocdir}"
AC_SUBST(NO_PREFIX_PACKAGE_DOC_DIR)
PACKAGE_DOC_DIR="${packageprefix}/${packagedocdir}"
AC_SUBST(PACKAGE_DOC_DIR)

dnl Subst PACKAGE_PIXMAPS_DIR.
NO_PREFIX_PACKAGE_PIXMAPS_DIR="${packagepixmapsdir}"
AC_SUBST(NO_PREFIX_PACKAGE_PIXMAPS_DIR)
PACKAGE_PIXMAPS_DIR="${packageprefix}/${packagepixmapsdir}"
AC_SUBST(PACKAGE_PIXMAPS_DIR)

dnl Subst PACKAGE_HELP_DIR.
NO_PREFIX_PACKAGE_HELP_DIR="${packagehelpdir}"
AC_SUBST(NO_PREFIX_PACKAGE_HELP_DIR)
PACKAGE_HELP_DIR="${packageprefix}/${packagehelpdir}"
AC_SUBST(PACKAGE_HELP_DIR)

dnl Subst PACKAGE_MENU_DIR.
NO_PREFIX_PACKAGE_MENU_DIR="${packagemenudir}"
AC_SUBST(NO_PREFIX_PACKAGE_MENU_DIR)
PACKAGE_MENU_DIR="${packageprefix}/${packagemenudir}"
AC_SUBST(PACKAGE_MENU_DIR)

AC_DEFINE_UNQUOTED(PACKAGE_DATA_DIR, "${packageprefix}/${packagedatadir}")
AC_DEFINE_UNQUOTED(PACKAGE_DOC_DIR, "${packageprefix}/${packagedocdir}")
AC_DEFINE_UNQUOTED(PACKAGE_PIXMAPS_DIR, "${packageprefix}/${packagepixmapsdir}")
AC_DEFINE_UNQUOTED(PACKAGE_HELP_DIR, "${packageprefix}/${packagehelpdir}")
AC_DEFINE_UNQUOTED(PACKAGE_MENU_DIR, "${packageprefix}/${packagemenudir}")
AC_DEFINE_UNQUOTED(PACKAGE_SOURCE_DIR, "${packagesrcdir}")
AC_DEFINE_UNQUOTED(PLUGINSDIR, "${pluginsdir}")

AC_CONFIG_FILES([
Makefile
src/Makefile
pixmaps/Makefile
src/plugins/Makefile
src/lib/Makefile
])
AC_OUTPUT

